added fleet api
